--- a/style.css
+++ b/style.css
@@ -1,1 +1,42 @@
-*{color: brown;}
+@font-face {
+    /* 字形名稱 */
+    font-family: Ngaan;
+    /* 字形來源 src url 路徑 */
+    src: url(./font/I.Ngaan.ttf);
+}* {
+    margin: 0;
+    padding: 0;
+    font-family: 微軟正黑體;
+    box-sizing: border-box;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    padding: 30px;
+}
+#logo span
+{font-family: Ngaan;
+font-size: 36px;
+font-weight: 900;}
+
+#nav{
+    display: grid;
+    grid-template-columns:1fr,1fr,1fr;
+    align-items: center;
+    text-align: center;
+}
+#nav a {
+    /* 文字-裝飾 - 底線、刪除線 */
+    text-decoration: none;
+    color: brown;
+    font-size: 20px;
+    /* 轉場：時間 */
+    transition: 0.3s;
+}
+
+/* :hover 滑入 */
+#nav a:hover {
+    color: black;
+    font-size: 22px;
+}
