更新瀏覽頁

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ font-weight: 900;}
 
 #nav{
     display: grid;
-    grid-template-columns:1fr,1fr,1fr;
+    grid-template-columns:1fr 1fr 1fr;
     align-items: center;
     text-align: center;
 }
