--- a/style.css
+++ b/style.css
@@ -40,3 +40,135 @@ font-weight: 900;}
     color: black;
     font-size: 22px;
 }
+/* 橫幅 */
+#banner {
+    /* 背景圖片 */
+    background-image: url(./img/noodle.jpg);
+    background-size: cover;
+    background-position: center;
+ /* 100vh 指的是跟螢幕一樣高 100% v h */
+ height: 100vh;
+ display: grid;
+
+ color: white;
+
+ align-items: center;
+ text-align: center;
+}
+#banner div {
+    width: 800px;
+    margin: 0 auto;
+}
+
+#banner div h1,#banner div h4{
+    font-family: Ngaan;
+    text-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+}
+#banner div h1 {
+    font-size: 120px;
+}
+
+#banner div h4 {
+    font-size: 40px;
+    text-align: left;}
+    /* Section */
+section {
+    width: 1200px;
+    margin: 0 auto;
+}
+#about>div {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-gap: 20px;
+}
+#about>div .img {
+background-image: url(./img/photo-1547928576-a4a33237cbc3.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
+height: 500px;
+}
+#about>div p{
+line-height: 2;
+letter-spacing: 5px;
+padding-right: 20px;
+}
+section h1{
+    
+    font-family: Ngaan;
+    margin-top: 60px;
+    font-size: 32px;
+    padding-bottom: 5px;
+    color: #252525;
+}
+#news ul{
+display: grid;
+grid-template-columns: 30% 70%;
+
+
+}
+hr{ margin-bottom: 40px;
+}
+/* 最新消息 */
+#news ul span{
+    font-size: 10px;
+    color: darkgray;
+    padding: 20px;
+}
+#news ul li
+{font: size 18px; padding: 20px 0;}
+
+#news div{text-align:right;}
+#news a{text-decoration: none;
+    color: #252525;}
+    /* 聯絡我們 */
+    #contact{
+   text-align: center;     
+    }
+
+    #contact p{
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+        line-height:2 ;
+
+    }
+#contact form {
+    width: 80%;
+    margin: 0 auto;
+}
+#contact form div{
+    display: grid;
+    grid-template-columns: 40% 60%;
+grid-gap: 20px;
+padding: 20px;}
+#contact form textarea{
+        grid-column: 1/3;
+        height: 200px;
+    }
+#contact input{
+    text-align: center;
+    padding: 10px;
+}
+#contact input[type="submit"] {
+    width: 500px;
+    background-color: #252525;
+    color: white;
+    margin: 50px 0;
+    border: 1px solid #252525;
+    transition: 0.3s;
+    padding: 20px;
+}
+#contact input[type="submit"]:hover{
+    background-color: seashell;
+    color: #252525;
+    border: 1px solid #252525;
+
+}
+footer{
+    margin-top: 100px;
+padding: 100px;
+text-align: center;
+background: #252525;
+color: aliceblue;}
+
